--- a/src/main/webapp/WEB-INF/templates/layout.xhtml
+++ b/src/main/webapp/WEB-INF/templates/layout.xhtml
@@ -3,9 +3,22 @@
 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
 >
 	<h:head>
 		<title>#{title}</title>
+		<script>
+		function onClose(code, channel, event) {
+			console.log('Client onClose listener: code: ' + code + ', channel:' + channel + ", event:" + event);
+			if(code == 1000) {
+				alert("Session has expired!");
+				console.log("Session has expired!");
+			}
+		}
+		function onOpen(channel) {
+			console.log('Client onOpen listener:  channel:' + channel);
+		}
+		</script>
 	</h:head>
 	<h:body>
 		<header>
@@ -18,5 +31,6 @@
 		<footer>
 			<ui:include src="/WEB-INF/includes/layout/footer.xhtml" />
 		</footer>
+		<f:websocket channel="exit" onclose="onClose" onopen="onOpen" scope="session" />
 	</h:body>
 </html>
